# DissertationCode

./: .gitignore  CMakeLists.txt  README.md  main.py  pyproject.toml  pytest.ini  uv.lock.license
analysis_py/: main.py  pyproject.toml
docs/: USAGE.md
src/analysis/: __init__.py  basemodel.py  combinedmodels.py  data_processing.py  models.py  objective.py  orificemodels.py  sluicemodel.py  sluicemodels.py  validate.py  weirmodels.py
src/cli/: __init__.py  parser.py
src/solver/: __init__.py  flume.py  main.cpp  solver.py  validation.py
src/visualisation/: __init__.py  baseplots.py  io.py  plots.py  template.py  theme.py
tests/: test_models.py
